--- a/config/locales/en/billing/products.en.yml
+++ b/config/locales/en/billing/products.en.yml
@@ -4,14 +4,14 @@ en:
       name: Free
     basic:
       name: Basic
-      description: This is an example plan that includes a free trial when paid for monthly.
+      description: Basic
       features:
-        - Demonstrates pricing per team member.
-        - Allows creation of up to fifty "Creative Concepts".
-        - Soft enforcement that limit.
-    pro:
-      name: Pro
-      description: An improved example plan that demonstrates different features.
-      features:
-        - Demonstrates a fixed price for up to ten team members.
-        - Allows creation of an unlimited number of "Creative Concepts".
+        - Customers in trial
+    # pro:
+    #   name: Full view
+    #   description: All the insights you need
+    #   features:
+    #     - Customers in trial
+    #     - Trials converted
+    #     - Failed payments
+    #     - MRR
